# permute-rs

./: Cargo.toml  README.md
src/: arbitrary_tandem_control_iter.rs  lib.rs  permutations.rs  permute_iter.rs
